tests/baselines/reference/inheritanceStaticMembersIncompatible.errors.txt
==== tests/cases/compiler/inheritanceStaticMembersIncompatible.ts (1 errors) ====
    class a {
        static x: string;
    }
    
    class b extends a {
          ~
!!! error TS2141: Class 'b' cannot extend class 'a':
!!! 	Types of static property 'x' of class 'b' and class 'a' are incompatible.
        static x: number;
    }